test/scc_test/exp/semantic-errors/089.a
089.t:4:7: error: invalid operands to binary '=='